--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
   <head>
      <title>Silas Kenneth</title>
+    <style>
+      h1{
+        color: #0099A9; 
+      }
+      body{
+         background: #F0DC50; 
+      }
+    </style>
   </head>
   <body>
     <h1>I am Silas Kenneth</h1>
