--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
   <head>
      <title>Silas Kenneth</title>
+     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <style>
       h1{
         color: #0099A9; 
+        font-family:Berkshire;
+        font-size: 400;
+        font-weight:600;
+        letter-spacing:3px;
       }
       body{
          background: #F0DC50; 
       }
+      
     </style>
   </head>
   <body>
