--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       h1{
         color: #0099A9; 
-        font-family:Berkshire;
+        font-family:"Berkshire Swash";
         font-size: 400;
         font-weight:600;
         letter-spacing:3px;
