--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       h1{
         color: #0099A9; 
         font-family:"Berkshire Swash";
-        font-size: 400;
-        font-weight:600;
-        letter-spacing:3px;
+        font-size: 3em;
+        font-weight:3em;
+        letter-spacing:6px;
       }
       body{
          background: #F0DC50; 
