--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         font-size: 3em;
         font-weight:3em;
         letter-spacing:6px;
+        margin-top:24vh;
+        margin-left:auto;
+        margin-right: auto;
       }
       body{
          background: #F0DC50; 
