--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
      <title>Silas Kenneth</title>
      <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Monoton" rel="stylesheet">
     <style>
       h1{
         color: #0099A9; 
-        font-family:Monoton;
+        font-family:"Cinzel Decorative";
         font-size: 3em;
         font-weight:3em;
         letter-spacing:6px;
