--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
      <title>Silas Kenneth</title>
      <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Monoton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
     <style>
       h1{
         color: #0099A9; 
-        font-family:"Cinzel Decorative";
+        font-family:"Raleway Dots";
         font-size: 3em;
         font-weight:3em;
         letter-spacing:6px;
