--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       h1{
         color: #0099A9; 
-        font-family:"Raleway Dots", cursive;
+        font-family:"Raleway Dots", 'cursive';
         font-size: 3em;
         font-weight:3em;
         letter-spacing:6px;
