--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         color: #0099A9; 
         font-family:"Raleway Dots", 'cursive';
         font-size: 3em;
-        font-weight:3em;
+        font-weight:500;
         letter-spacing:6px;
-        margin-top:24vh;
+        margin-top:45vh;
         margin-left:auto;
         margin-right: auto;
+        text-align:center;
       }
       body{
          background: #F0DC50; 
