--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         text-align:center;
       }
       body{
-         background: #D8D8D8; 
+         background: #ffffff; 
       }
       
     </style>
