--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
      <title>Silas Kenneth</title>
      <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Monoton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots|Vast+Shadow" rel="stylesheet">
     <style>
       h1{
         color: #0099A9; 
-        font-family:"Raleway Dots", 'cursive';
+        font-family:"Vast Shadow", 'cursive';
         font-size: 3em;
         font-weight:500;
         letter-spacing:6px;
