--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
      <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway+Dots|Vast+Shadow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
     <style>
       h1{
         color: #0099A9; 
-        font-family:"Vast Shadow", 'cursive';
+        font-family:"Codystar", 'cursive';
         font-size: 3em;
         font-weight:500;
         letter-spacing:6px;
