--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         margin-left:auto;
         margin-right: auto;
         text-align:center;
+        background: #7A33FF;
       }
       body{
          background: #ffffff; 
