--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         margin-left:auto;
         margin-right: auto;
         text-align:center;
-        background: #7A33FF;
+        background: #6600FF;
       }
       body{
          background: #ffffff; 
