--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
     <style>
       h1{
-        color: #0099A9; 
+        color: #fff; 
         font-family:"Codystar", 'cursive';
         font-size: 3em;
         font-weight:500;
