--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         margin-right: auto;
         text-align:center;
         background: #6600FF;
+        display:inline-block;
       }
       body{
          background: #ffffff; 
