--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         font-weight:500;
         letter-spacing:6px;
         margin-top:45vh;
-        margin-left:auto;
-        margin-right: auto;
+        margin-left:auto!important;
+        margin-right:auto!important;
         text-align:center;
         background: #6600FF;
         display:inline-block;
