--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
         font-size: 3em;
         font-weight:500;
         letter-spacing:6px;
-        margin-top:45vh;
-        margin-left:auto!important;
-        margin-right:auto!important;
         text-align:center;
         background: #6600FF;
         display:inline-block;
@@ -23,10 +20,12 @@
       body{
          background: #ffffff; 
       }
-      
+      div{
+         margin:45vh auto 0px auto; 
+      }
     </style>
   </head>
   <body>
-    <h1>I am Silas Kenneth</h1>
+    <div> <h1>I am Silas Kenneth</h1></div>
   </body>
 </html>
