[FIx] Fix the centering of the text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          background: #ffffff; 
       }
       div{
-         margin:45vh auto 0px auto; 
+         margin:45vh 20vw 20vw 20vw; 
       }
     </style>
   </head>
