--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </style>
   </head>
   <body>
-    <div> <h1>I am Silas Kenneth</h1></div>
+    <div>
+       <h1>I am Silas Kenneth</h1>
+       <p style="text-align:right;">I always believe in change</p>
+    </div>
   </body>
 </html>
