--- a/index.html
+++ b/index.html
@@ -2,33 +2,31 @@
 <html>
   <head>
      <title>Silas Kenneth</title>
-     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Monoton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots|Vast+Shadow" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
-    <style>
-      h1{
-        color: #fff; 
-        font-family:"Codystar", 'cursive';
-        font-size: 3em;
-        font-weight:500;
-        letter-spacing:6px;
-        text-align:center;
-        background: #6600FF;
-        display:inline-block;
-      }
-      body{
-         background: #ffffff; 
-      }
-      div{
-         margin:45vh 20vw 20vw 20vw; 
-      }
-    </style>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+      <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Calistoga|Lobster+Two:700&display=swap" rel="stylesheet"> 
   </head>
   <body>
-    <div>
-       <h1>I am Silas Kenneth</h1>
-       <p style="text-align:right;">I always believe in change</p>
-    </div>
+      <header id="header">
+        <ul>
+        <li><h1 id="title">I am, Kenneth</h1></li>
+        <li>Wes</li>
+      </ul>
+      </header>
+      <main id="main">
+        <section id="punchline">
+          <h3>Hey there my name is <span>Imaginations</span> <br> to useful applications</h3>
+        </section>
+        <section id="contact">
+          We could talk
+        </section>
+
+      </main>
+      <footer id="footer">
+        
+        <h3>I am the footer</h3>
+      </footer>
   </body>
 </html>
