--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h3>Hey there my name is <span>Imaginations</span> <br> to useful applications</h3>
         </section>
         <section id="contact">
-          We could talk
+          We could talk Now
         </section>
 
       </main>
