--- a/index.html
+++ b/index.html
@@ -1,19 +1,95 @@
 <!DOCTYPE html>
-<html>
-  <head>
-     <title>Silas Kenneth</title>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-      <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet"> 
-      <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Calistoga|Lobster+Two:700&display=swap" rel="stylesheet"> 
-  </head>
-  <body>
-      <header id="header">
-        <ul>
-        <li><h1 id="title">I am, Kenneth</h1></li>
-        <li>Wes</li>
-      </ul>
-      </header>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"></link>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Kenneth Omondi</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">SK</div>
+            <ul>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#projects">Projects</a>
+                </li>
+                <li>
+                    <a href="#skills">Skills</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero">
+            <h1>Silas Kenneth</h1>
+            <h2>Software Engineer</h2>
+            <p>Building scalable solutions with C# and .NET</p>
+            <div class="cta">
+                <a href="#contact" class="primary-btn">Get in touch</a>
+                <a href="#projects" class="secondary-btn">View my work</a>
+            </div>
+        </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I'm a software engineer specializing in backend development with C# and .NET. I focus on building scalable, maintainable applications and microservices.</p>
+        </section>
+
+        <section id="skills">
+        <h2>Technical Skills</h2>
+        <div class="skills-grid">
+        <div class="skill-card">
+        <i class="fas fa-code"></i>
+        <h3>Languages</h3>
+        <p>C#, JavaScript, SQL</p>
+        </div>
+        <div class="skill-card">
+        <i class="fas fa-server"></i>
+        <h3>Backend</h3>
+        <p>.NET Core, ASP.NET, Entity Framework</p>
+        </div>
+        <div class="skill-card">
+        <i class="fas fa-database"></i>
+        <h3>Databases</h3>
+        <p>SQL Server, MongoDB</p>
+        </div>
+        </div>
+        </section>
+
+        <section id="projects">
+        <h2>Featured Projects</h2>
+        <div class="projects-grid">
+        <article class="project-card">
+        <h3>Project Name</h3>
+        <p>Description of the project and technologies used.</p>
+        <div class="project-links">
+        <a href="#" target="_blank"><i class="fab fa-github"></i> View Code</a>
+        <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+        </div>
+        </article>
+        </div>
+        </section>
+
+        <section id="contact">
+        <h2>Get In Touch</h2>
+        <div class="social-links">
+        <a href="https://github.com/SilasKenneth" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:contact@example.com"><i class="fas fa-envelope"></i></a>
+        </div>
+        </section>
+        </main>
+
+        <footer>
+        <p>&copy; 2024 Silas Kenneth. All rights reserved.</p>
+        </footer>
+</body>
 </html>
